# edu_analytics

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  rules.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yaml
backend/: Dockerfile  alembic.ini  entrypoint.sh
backend/alembic/: env.py
backend/alembic/versions/: c796818c4fae_initial_tables.py  e6bb591193d3_update_models_to_match_csv_structure.py
backend/app/: main.py  schemas.py
backend/app/api/: hse_analysis.py  vuzopedia_analysis.py
backend/app/db/: crud.py  models.py  session.py
backend/app/services/: hse_service.py  shared.py  vuzopedia_service.py
backend/scripts/: load_data.py
db/: Dockerfile
frontend/: .eslintrc.js  .prettierignore  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  api.js
frontend/src/components/common/: EmptyResult.jsx  Error.jsx  (+2 more)
frontend/src/pages/: DashboardPage.jsx  ProgramDetailsPage.jsx  ProgramsPage.jsx
ml/: Dockerfile  file_manager.py  main.py  requirements.txt  tag_extractor.py  tags.csv
parser/: Dockerfile  main.py  requirements.txt
parser/runners/: __init__.py  base_runner.py  hse_runner.py  programm_runner.py  vyzopedia_runner.py
parser/scrapers/: base_scraper.py  hse_fcs.py  program.py  vyzopedia.py
parser/storage/: file_manager.py
storage/: file_manager.py
storage/files/hse_courses/: hse_course.csv  hse_course.json
storage/files/hse_programs/: hse_program.csv  hse_program.json
storage/files/vyzopedia/: vuzopedia_program.json
(+51 files in other folders)
