[project]
name = "edu-analytics"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
]
parser = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "pre-commit>=3.8.0",
    "httpx>=0.27.2",
    "ruff>=0.6.9",
    "isort>=5.13.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
exclude = ["venv",".venv","build","dist"]

[tool.ruff.lint]
select = ["E","F","W","I"]

[tool.isort]
profile = "black"
line_length = 100
